re PR rtl-optimization/7702 (gcc-3.2 optimization problem on a DEC alpha under OSF1)

PR optimization/7702
        * reload1.c (reload_cse_simplify_set): Honor
        CANNOT_CHANGE_MODE_CLASS.

From-SVN: r62921